[package]
name = "ioreg"
version = "0.1.0"
edition = "2024"
authors = ["Misaka Xiaxun <misaka@nekoit.org>"]
description = "A simple tool to read ioreg properties"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Moeweb647252/ioreg"
repository = "https://github.com/Moeweb647252/ioreg"
keywords = ["ioreg", "macos"]
categories = ["development-tools"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
