[package]
name = "ioreg"
version = "0.1.1"
edition = "2024"
authors = ["Misaka Xiaxun <misaka@nekoit.org>"]
description = "A simple tool to read ioreg properties"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Moeweb647252/ioreg"
repository = "https://github.com/Moeweb647252/ioreg"
keywords = ["ioreg", "macos"]
categories = ["development-tools"]


[dependencies]
plist = { version = "1.7.1", features = [
    "enable_unstable_features_that_may_break_with_minor_version_bumps",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
